--- a/resources/views/admin/assets/scss/apps/_app_users.scss
+++ b/resources/views/admin/assets/scss/apps/_app_users.scss
@@ -18,7 +18,7 @@
 .app_users_home {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .app_users_home article {
@@ -26,6 +26,7 @@
   padding: 30px;
   background: #FFFFFF;
   margin-bottom: 30px;
+  margin-right: 20px;
   text-align: center;
 }
 
